# aaahhh

./: Cargo.toml  README.md  test_seek.rs
.github/workflows/: rust.yml
src/: main.rs
src/audio/: mod.rs  player.rs  sounds.rs
src/cli/: daemon.rs  mod.rs  start.rs  stop.rs
src/core/: config.rs  constants.rs  errors.rs  mod.rs  utils.rs
