[package]
name = "aaahhh"
description = "A lightning fast mechanical keyboard sound simulator"
version = "0.1.4"
edition = "2021"
authors = ["Subhajit chaudhury <github: github.com/subhdotsol>"]
license-file = "LICENSE"
repository = "https://github.com/subhdotsol/aaahhh"
readme = "README.md"
categories = []
keywords = ["aaahhh", "keyboard", "keypress", "sounds"]

[dependencies]
rodio = "0.20.1"
console = "0.15.8"
rdev = "0.5.3"
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11.0"
dirs = "4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = "2.10.1"
zip = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
sysinfo = "0.38.4"

# Verified builds
